--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -28,6 +28,33 @@
   color: #61dafb;
 }
 
+.head-and-nav {
+  background-image: url(../public/mountain-wide-one.webp);
+  /* background-size: 150px; */
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  /* background-attachment: fixed; */
+}
+
+header {
+  display: flex;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+
+}
+
+.nav-item {
+  padding: 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
