--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -27,9 +27,10 @@
 .App-link {
   color: #61dafb;
 }
+
 /* start my inputs */
 .head-and-nav {
-  background-image: url(../public/mountain-wide-one.webp);
+  background-image: url(./components/pages/images/header-img.jpg);
   /* background-size: 150px; */
   background-position:center;
   background-repeat: no-repeat;
@@ -50,7 +51,7 @@ h1 {
   align-items: flex-start;
   justify-content: flex-start;
   padding: 7px;
-  color: aliceblue;
+  color: rgb(1, 28, 9);
   margin-left: 54px;
 }
 
@@ -77,31 +78,125 @@ h1 {
 }
 
 .nav-item a:hover {
-  color: cadetblue;
+  color: rgb(1, 28, 9);
   background-color: rgb(240, 248, 255, .4);
 } 
 
 .about-container {
-  background-image: url(../public/mountain-wide-one.webp);
+  background-image: url(./components/pages/images/snow-scene.jpg);
   background-size: cover;
   height: 100vh;
 }
 
-img {
+/* img {
   height: 100px;
   width: 100px;
-}
-
-.card1 {
-  display: flex;
-}
+} */
 
 .portfolio {
   background-image: url(./components/pages/images/cyber-tree.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.card1 {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.card1 img {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+
+/* ABOUT CSS */
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-pic {
+  border-radius: 5px 100px;
+  height:267px;
+  width: 200px;
+  margin: 0px 75px;
+}
+
+.profile-text {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 15px;
+}
+
+/* FOOTER */
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.github-icon a img {
+  margin: 10px;
+  max-height: 64px;
+  background-color: grey;
+  border-radius: 50px;
+}
+
+.linkedin-icon a img {
+  margin: 10px;
+  height: 64px;
+  background-color: grey;
+  border-radius: 50px;
+
+}
+
+.facebook-icon a img {
+  margin: 10px;
+  max-height: 64px;
+  background-color: grey;
+  border-radius: 50px;
+
+}
+
+/* imported snowfall */
+body{
+  background: black;
+  color: white;
+}
+.intro,
+.intro a{
+  color:#fff;
+}
+/* customizable snowflake styling */
+.snowflake {
+  color: #fff;
+  font-size: 1em;
+  font-family: Arial;
+  text-shadow: 0 0 1px #000;
+}
+
+@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
+/* Demo Purpose Only*/
+.demo {
+  font-family: 'Raleway', sans-serif;
+	color:#fff;
+    display: block;
+    margin: 0 auto;
+    padding: 15px 0;
+    text-align: center;
+}
+.demo a{
+  font-family: 'Raleway', sans-serif;
+color: #000;		
+}
+/* end snowfall */
+
 /* use for icons or borders behind icons */
 @keyframes App-logo-spin {
   from {
