--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -1,3 +1,4 @@
+/* ORIGINAL */
 .App {
   text-align: center;
 }
@@ -28,7 +29,13 @@
   color: #61dafb;
 }
 
-/* start my inputs */
+/* START MY INPUTS */
+body{
+  background: black;
+  color: white;
+  /* display: flex; */
+}
+
 .head-and-nav {
   background-image: url(./components/pages/images/header-img.jpg);
   /* background-size: 150px; */
@@ -82,63 +89,251 @@ h1 {
   background-color: rgb(240, 248, 255, .4);
 } 
 
-.about-container {
-  background-image: url(./components/pages/images/snow-scene.jpg);
+/* ABOUT CSS */
+
+.about-img {
+  background-image: url(./components/pages/images/cyber-snow.jpg);
+  position: relative;
   background-size: cover;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: blur(3px);
+  opacity: .9;
+  box-shadow: 10px 10px 10px 10px gray;
 }
+
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin: 5% 20px; */
+  position: absolute;
+  bottom: 0;
+ 
+}
+
+.profile-pic {
+  border-radius: 15px 57px;
+  height:267px;
+  width: 200px;
+  margin: 0px 75px;
+  box-shadow: 4px 2px 15px 4px lightblue;
+}
+
+.profile-text {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 15px;
+  padding: 15px;
+  background-color: rgba(184, 223, 246, 0.9);
+  color: #282c34;
+  border-radius: 57px 15px;
+  width: 55%;
+  height: 40%;
+  box-shadow: 4px 2px 15px 4px lightblue;
+}
+
 
 /* img {
   height: 100px;
   width: 100px;
 } */
 
+/* PORTFOLIO */
 .portfolio {
-  background-image: url(./components/pages/images/cyber-tree.jpg);
+  background-image: url(./components/pages/images/cyber-forest2.jpg);
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6); */
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  max-height: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin: 5px;
+  /* border-radius: 50px 50px 50px 50px; */
+
+  /* filter: blur(2px); */
+}
+
+/* .img-text-overlay {
+  position: relative;
+  width: 100%;
+  height: 69%;
+  background-color: rgba(240, 248, 255, .8);
+  display: flex;
   align-items: center;
+  justify-content: center;
+
+} */
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 .card1 {
-  max-height: 100px;
-  max-width: 100px;
+  /* display: flex; */
+  /* max-height: 300px;
+  max-width: 300px; */
+  height: 300px;
+  width: 50%;
+  /* margin: 20px; */
+  margin-top: 30px;
+  
+  /* background-image: url(./components/pages/images/headGG.png);
+  background-size:contain;
+  background-repeat: no-repeat;
+  color: white; */
+}
+
+.card1-text {
+  position:relative;
+  top: -207px;
+  bottom: 0;
+  right: 0;
+  left: 215px;
+  text-decoration: none;
+  color: aliceblue;
+  background-color: rgba(240,248,255, .7);
+  max-width: 300px;
+  padding: 92px 0px;
+  border-radius: 5px 100px;
 }
 
 .card1 img {
-  max-height: 100px;
-  max-width: 100px;
-}
-
-
-/* ABOUT CSS */
-.about-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.profile-pic {
+  max-height: 300px;
+  max-width: 300px;
   border-radius: 5px 100px;
-  height:267px;
-  width: 200px;
-  margin: 0px 75px;
 }
 
-.profile-text {
+.card2 {
+  height: 300px;
+  width: 50%;
+  /* margin: 20px; */
+  margin-top: 30px;
+  
+}
+
+.card2 img {
+  max-height: 300px;
+  /* max-width: 300px; */
+  height: 206px;
+  width: 300px;
+  border-radius: 100px 5px;
+}
+
+.card3 {
+  height: 300px;
+  width: 50%;
+  /* margin: 20px; */
+  margin-top: 30px;
+  
+}
+
+.card3 img {
+  max-height: 300px;
+  max-width: 300px;
+  border-radius: 5px 100px;
+}
+
+.card4 {
+  height: 300px;
+  width: 50%;
+  /* margin: 20px; */
+  margin-top: 30px;
+  
+}
+
+.card4 img {
+  max-height: 300px;
+  max-width: 300px;
+  border-radius: 100px 5px;
+}
+
+
+
+
+/* CONTACT */
+.contact-form {
   display: flex;
   flex-direction: column;
-  margin: 0px 15px;
+  align-items: flex-start;
+  max-width: 50%;
+  background-color: rgba(211,211,211, .7);
+  margin-left: 20px;
+  border-radius: 100px 5px;
+}
+.contact-form-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 31%;
+}
+
+h3 {
+  margin-bottom: 0px;
+}
+
+h4 {
+  text-align: left;
+}
+
+.name-input {
+  /* margin: 5px; */
+  height: 20px;
+  border-radius: 5px;
+}
+
+.email-input {
+  /* margin: 5px; */
+  height: 20px;
+  border-radius: 5px;
+}
+
+.subject-input {
+  /* margin: 5px; */
+  height: 20px;
+  border-radius: 5px;
+}
+
+.message-input {
+  /* margin: 5px; */
+  height: 100px;
+  width: 200%;
+  /* align-self: flex-end; */
+  border: solid black 2px;
+  border-radius: 10px;
+}
+
+.submit-button {
+  margin: 10px 10px 10px 3px;
+  background-color: forestgreen;
+  color: aliceblue;
+  border-radius: 5px;
+
 }
 
 /* FOOTER */
 .footer-container {
+  background:rgb(135,206,235) url(./components/pages/images/header-img.jpg);
+  background-position: bottom;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* position: absolute; */
+  /* bottom: 0;
+  width: 100%; */
+  /* text-align: center; */
+  filter: brightness(1.5);
+}
+
+.f-hue {
+  filter: hue-rotate(45deg);
 }
 
 .github-icon a img {
@@ -146,6 +341,7 @@ h1 {
   max-height: 64px;
   background-color: grey;
   border-radius: 50px;
+  filter: brightness(.5);
 }
 
 .linkedin-icon a img {
@@ -153,7 +349,7 @@ h1 {
   height: 64px;
   background-color: grey;
   border-radius: 50px;
-
+  filter: brightness(.5);
 }
 
 .facebook-icon a img {
@@ -161,14 +357,24 @@ h1 {
   max-height: 64px;
   background-color: grey;
   border-radius: 50px;
+  filter: brightness(.2);
+}
 
+/* HUES */
+
+.green-hue {
+  filter: hue-rotate(278deg);
+}
+
+.summer-hue {
+  filter: hue-rotate(194deg) brightness(1.3);
+}
+
+.summer-hue-footer {
+  filter: hue-rotate(194deg) brightness(1.3);
 }
 
 /* imported snowfall */
-body{
-  background: black;
-  color: white;
-}
 .intro,
 .intro a{
   color:#fff;
@@ -179,6 +385,7 @@ body{
   font-size: 1em;
   font-family: Arial;
   text-shadow: 0 0 1px #000;
+  filter: blur(3px);
 }
 
 @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
