continuing to work on fixing style for contact page

--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -3,11 +3,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -25,15 +20,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 /* START MY INPUTS */
 body{
   background: black;
   color: white;
   /* display: flex; */
+}
+
+ul {
+margin: 0;
 }
 
 .head-and-nav {
@@ -82,6 +77,7 @@ h1 {
   border-radius: 7px;
   background-size: 20px;
   padding: 4px;
+  filter: hue-rotate(50deg);
 }
 
 .nav-item a:hover {
@@ -99,9 +95,9 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  filter: blur(3px);
+  filter: blur(3px) brightness(1.1);
   opacity: .9;
-  box-shadow: 10px 10px 10px 10px gray;
+  box-shadow: 0px 0px 15px 17px lightblue inset;
 }
 
 .about-container {
@@ -110,7 +106,7 @@ h1 {
   align-items: center;
   /* margin: 5% 20px; */
   position: absolute;
-  bottom: 0;
+  bottom: 4%;
  
 }
 
@@ -145,6 +141,7 @@ h1 {
 .portfolio {
   background-image: url(./components/pages/images/cyber-forest2.jpg);
   /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6); */
+  box-shadow: 0px 0px 15px 17px green inset;
   background-size: cover;
   background-position: center;
   max-height: 100%;
@@ -258,21 +255,63 @@ a {
 
 
 /* CONTACT */
+/* .contact-pic {
+  background-image: url(./components/pages/images/cyber-mountain2.jpg);
+  background-size:cover;
+  background-position:top; 
+  background-repeat: no-repeat;
+  max-height: 100%;
+  max-width: 100%;
+  position: relative;
+
+} */
+.contact-pic {
+ width: 50%;
+ position: relative;
+ opacity: .9;
+ height: 100%;
+ left: 1.5px;
+ filter: blur(2px) brightness(1.1);
+ /* border-radius: 5px; */
+ /* margin-bottom: 10px; */
+}
+
+.contact-pic2 {
+  width: 50%;
+  position: relative;
+  opacity: .9;
+  height: 100%;
+  right: 1.2px;
+  top: 0;
+  filter: blur(2px) brightness(1.1);
+  /* border-radius: 5px; */
+  /* margin-bottom: 10px; */
+ }
+
 .contact-form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 50%;
-  background-color: rgba(211,211,211, .7);
-  margin-left: 20px;
-  border-radius: 100px 5px;
+  /* justify-content: center; */
+  /* max-width: 100%; */
+  width: 48%;
+  /* height: 95%; */
+  background-color: rgba(255,255,224, .7);
+  /* margin-left: 20px; */
+  border-radius: 15px 15px;
+  position: absolute;
+  bottom: 0%;
+  right: 25%;
+  box-shadow: 0px 0px 125px 5px goldenrod inset;
+  color: saddlebrown;
+  /* padding: 5px 0px 50px 0px; */
 }
 .contact-form-text {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  margin-left: 31%;
+  /* align-items: flex-start; */
+  /* justify-content: center; */
+  margin-left: 13%;
 }
 
 h3 {
@@ -332,10 +371,6 @@ h4 {
   filter: brightness(1.5);
 }
 
-.f-hue {
-  filter: hue-rotate(45deg);
-}
-
 .github-icon a img {
   margin: 10px;
   max-height: 64px;
@@ -367,11 +402,19 @@ h4 {
 }
 
 .summer-hue {
-  filter: hue-rotate(194deg) brightness(1.3);
+  filter: hue-rotate(194deg) brightness(1.25);
 }
 
 .summer-hue-footer {
-  filter: hue-rotate(194deg) brightness(1.3);
+  filter: hue-rotate(194deg) brightness(2.5) saturate(60%);
+}
+
+.fall-hue{
+  filter: hue-rotate(150deg) saturate(200%);
+}
+
+.fall-hue-footer {
+  filter: hue-rotate(150deg);
 }
 
 /* imported snowfall */
