--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -167,10 +167,10 @@ h1 {
 
 } */
 
-a {
+/* a {
   text-decoration: none;
   color: black;
-}
+} */
 
 .card1 {
   /* display: flex; */
@@ -291,16 +291,16 @@ a {
 .contact-form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  /* justify-content: center; */
+  align-items: center;
+  /* justify-content: flex-start; */
   /* max-width: 100%; */
   width: 48%;
   /* height: 95%; */
-  background-color: rgba(255,255,224, .7);
+  background-color: rgba(255,255,224, .8);
   /* margin-left: 20px; */
   border-radius: 15px 15px;
   position: absolute;
-  bottom: 0%;
+  bottom: -7%;
   right: 25%;
   box-shadow: 0px 0px 125px 5px goldenrod inset;
   color: saddlebrown;
@@ -309,9 +309,9 @@ a {
 .contact-form-text {
   display: flex;
   flex-direction: column;
-  /* align-items: flex-start; */
-  /* justify-content: center; */
-  margin-left: 13%;
+  align-items: center;
+  /* justify-content: flex-start; */
+  /* margin-left: 13%; */
 }
 
 h3 {
@@ -349,12 +349,36 @@ h4 {
   border-radius: 10px;
 }
 
+/* textarea {
+  width: 464px;
+  height: 161px;
+} */
+
 .submit-button {
   margin: 10px 10px 10px 3px;
   background-color: forestgreen;
   color: aliceblue;
   border-radius: 5px;
 
+}
+
+/* RESUME */
+.resume-container {
+  background-image: url('./components/pages/images/cyber-fall.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* width: 150%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+.resume-link a {
+  text-decoration: none;
+   color: aliceblue;
 }
 
 /* FOOTER */
@@ -410,7 +434,7 @@ h4 {
 }
 
 .fall-hue{
-  filter: hue-rotate(150deg) saturate(200%);
+  filter: hue-rotate(162deg) saturate(200%);
 }
 
 .fall-hue-footer {
