--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -1,3 +1,5 @@
+
+
 /* ORIGINAL */
 .App {
   text-align: center;
@@ -21,11 +23,15 @@
 }
 
 /* START MY INPUTS */
-body{
-  background: black;
-  color: white;
-  /* display: flex; */
-}
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
+  body {
+    background: black;
+    color: white;
+    /* display: flex; */
+    font-family: 'Cinzel', serif;
+  }
 
 ul {
 margin: 0;
@@ -40,16 +46,18 @@ margin: 0;
   margin: 0;
   padding: 0;
   /* background-attachment: fixed; */
+  font-family: 'Cinzel', serif;
 }
 
 header {
   display: flex;
+  font-family: 'Cinzel', serif;
 }
 
 h1 {
   display: flex;
-  font-family: helvetica;
-  flex-direction: row;
+  font-family: 'Cinzel', serif;
+    flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
   padding: 7px;
@@ -131,88 +139,129 @@ h1 {
   box-shadow: 4px 2px 15px 4px lightblue;
 }
 
-
-/* img {
-  height: 100px;
-  width: 100px;
+/* .profile-text h2 {
+  font-weight:bolder;
 } */
+
+.about-p-welcome {
+  font-weight: bolder;
+  font-size: large;
+}
+
+.about-p {
+  font-family: 'Alegreya', serif;
+  font-size: larger;
+
+}
 
 /* PORTFOLIO */
 .portfolio {
   background-image: url(./components/pages/images/cyber-forest2.jpg);
-  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6); */
-  box-shadow: 0px 0px 15px 17px green inset;
-  background-size: cover;
+  background-size:cover;
   background-position: center;
-  max-height: 100%;
+  background-repeat: no-repeat;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
-  justify-content:flex-start;
-  align-items: flex-start;
   flex-wrap: wrap;
-  margin: 5px;
-  /* border-radius: 50px 50px 50px 50px; */
-
-  /* filter: blur(2px); */
+  min-height: 50vh;
+  /* box-shadow: -4px 3px 15px 0px rgb(214, 144, 93) inset; */
 }
 
-/* .img-text-overlay {
-  position: relative;
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
   width: 100%;
-  height: 69%;
-  background-color: rgba(240, 248, 255, .8);
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  display: flex;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+  /* display: flex;
+  flex-wrap: wrap; */
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  /* background-color: rgba(47, 79, 79, .97); */
+}
+
+.Collapsible span{
+  /* animation: glow 3500ms infinite; */
+  font-size: x-large;
+  font-weight: 900;
+  border-radius: 5px;
+  cursor: pointer;
+  width: fit-content;
+  height: fit-content;
+  /* color: rgb(135, 241, 209); */
+}
+.Collapsible__contentInner {
+
+}
+/* .Collapsible__contentInner {
+  animation: none;
+} */
+
+.project-container {
+  position: relative;
+  width: 50%;
+  /* max-height: 50vh; */
+  left: 25%;
+  background-color: rgba(47, 79, 79, .97);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+  /* border-radius: 15px; */
+  border-radius: 15px 57px;
 
-} */
-
-/* a {
-  text-decoration: none;
-  color: black;
-} */
+}
 
 .card1 {
-  /* display: flex; */
-  /* max-height: 300px;
-  max-width: 300px; */
-  height: 300px;
   width: 50%;
-  /* margin: 20px; */
+  height: fit-content;
+  max-height: 100vh ;
   margin-top: 30px;
-  
-  /* background-image: url(./components/pages/images/headGG.png);
-  background-size:contain;
-  background-repeat: no-repeat;
-  color: white; */
+  z-index: 5;
 }
 
 .card1-text {
-  position:relative;
-  top: -207px;
-  bottom: 0;
-  right: 0;
-  left: 215px;
-  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+}
+
+.card1-text a {
+  text-decoration: underline;
   color: aliceblue;
-  background-color: rgba(240,248,255, .7);
-  max-width: 300px;
-  padding: 92px 0px;
-  border-radius: 5px 100px;
 }
 
 .card1 img {
   max-height: 300px;
   max-width: 300px;
-  border-radius: 5px 100px;
+  border-radius: 15px 57px;
 }
 
 .card2 {
-  height: 300px;
+  /* height: 300px; */
   width: 50%;
   /* margin: 20px; */
   margin-top: 30px;
-  
+  z-index: 5;
+  /* animation: glow 2000ms infinite */
 }
 
 .card2 img {
@@ -220,15 +269,24 @@ h1 {
   /* max-width: 300px; */
   height: 206px;
   width: 300px;
-  border-radius: 100px 5px;
+  border-radius: 15px 15px;
 }
 
+.card2-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+}
+
+
+
 .card3 {
-  height: 300px;
+  /* height: 300px; */
   width: 50%;
   /* margin: 20px; */
   margin-top: 30px;
-  
+  /* animation: glow 2000ms infinite */
 }
 
 .card3 img {
@@ -238,11 +296,11 @@ h1 {
 }
 
 .card4 {
-  height: 300px;
+  /* height: 300px; */
   width: 50%;
   /* margin: 20px; */
   margin-top: 30px;
-  
+  /* animation: glow 2000ms infinite */
 }
 
 .card4 img {
@@ -251,57 +309,45 @@ h1 {
   border-radius: 100px 5px;
 }
 
+.description {
+  /* display: flex; */
+  margin: 0px 10px;
+  /* font-family: 'Libre Baskerville', serif; */
+  font-family: 'Alegreya', serif;
+  text-align: left;
+}
 
+.port-icon img {
+  margin: 10px;
+  max-height: 30px;
+  max-width: 30px;
+  background-color: grey;
+  border-radius: 50px;
+  filter: brightness(.5);
+}
 
 
 /* CONTACT */
-/* .contact-pic {
-  background-image: url(./components/pages/images/cyber-mountain2.jpg);
+.contact-container {
+  background-image: url(./components/pages/images/cyber-field.jpg);
   background-size:cover;
-  background-position:top; 
+  background-position: center;
   background-repeat: no-repeat;
-  max-height: 100%;
-  max-width: 100%;
-  position: relative;
-
-} */
-.contact-pic {
- width: 50%;
- position: relative;
- opacity: .9;
- height: 100%;
- left: 1.5px;
- filter: blur(2px) brightness(1.1);
- /* border-radius: 5px; */
- /* margin-bottom: 10px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* box-shadow: -4px 3px 15px 0px rgb(214, 144, 93) inset; */
 }
-
-.contact-pic2 {
-  width: 50%;
-  position: relative;
-  opacity: .9;
-  height: 100%;
-  right: 1.2px;
-  top: 0;
-  filter: blur(2px) brightness(1.1);
-  /* border-radius: 5px; */
-  /* margin-bottom: 10px; */
- }
 
 .contact-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: flex-start; */
-  /* max-width: 100%; */
   width: 48%;
-  /* height: 95%; */
   background-color: rgba(255,255,224, .8);
-  /* margin-left: 20px; */
   border-radius: 15px 15px;
-  position: absolute;
-  bottom: -7%;
-  right: 25%;
+  margin: 3% ;
   box-shadow: 0px 0px 125px 5px goldenrod inset;
   color: saddlebrown;
   /* padding: 5px 0px 50px 0px; */
@@ -364,23 +410,58 @@ h4 {
 
 /* RESUME */
 .resume-container {
-  background-image: url('./components/pages/images/cyber-fall.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url(./components/pages/images/cyber-fall4.jpg);
+  background-size:cover;
   background-position: center;
-  /* width: 150%; */
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  box-shadow: -4px 3px 15px 0px rgb(214, 144, 93) inset;
 }
 
+
+.resume-link {
+  margin-top: 1%;
+  width: 50%;
+  z-index: 3;
+}
 
 .resume-link a {
-  text-decoration: none;
-   color: aliceblue;
+  /* text-decoration: none; */
+   color: lightseagreen;
+   background-color: #282c34;
+   /* margin-top: 20px; */
+  border-radius: 10px 10px 1000px 1000px;
+   width: 10%;
+   padding: 1% 10.5%;
+   /* box-shadow: 0px 1px 7px 0px rgb(214, 144, 93) inset; */
+   border-bottom: rgba(214, 144, 93, .7) inset;
 }
 
+.resume-skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(47, 79, 79, .97);
+  /* border-radius: 15px; */
+  padding: 3px 32px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-bottom: .5%;
+  /* position: relative;
+  top: 24%; */
+  z-index: 2;
+  /* height: 900%; */
+  box-shadow: 0px 0px 20px 0px rgb(214, 144, 93) inset;
+}
+
+li {
+  list-style-type: none;
+  text-align: left;
+}
 /* FOOTER */
 .footer-container {
   background:rgb(135,206,235) url(./components/pages/images/header-img.jpg);
@@ -403,12 +484,20 @@ h4 {
   filter: brightness(.5);
 }
 
+.github-icon a img:hover {
+  filter: brightness(.9);
+}
+
 .linkedin-icon a img {
   margin: 10px;
   height: 64px;
   background-color: grey;
   border-radius: 50px;
   filter: brightness(.5);
+}
+
+.linkedin-icon a img:hover {
+  filter: brightness(.9);
 }
 
 .facebook-icon a img {
@@ -419,6 +508,9 @@ h4 {
   filter: brightness(.2);
 }
 
+.facebook-icon a img:hover {
+  filter: brightness(.6);
+}
 /* HUES */
 
 .green-hue {
@@ -479,4 +571,25 @@ color: #000;
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes glow {
+  0% {
+      filter: brightness(.5);
+  
+  }
+  /* 25% {
+      filter: brightness(.75);
+  } */
+  50% {
+      filter: brightness(2);
+  }
+  /* 75% {
+    filter: brightness(1.25);
+  } */
+  100% {
+      filter: brightness(.5);
+      
+  }
+  
 }
