--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -1,5 +1,3 @@
-
-
 /* ORIGINAL */
 .App {
   text-align: center;
@@ -81,7 +79,7 @@ h1 {
 .nav-item a {
   text-decoration: none;
   color: aliceblue;
-  background-color: rgba(95, 158, 160, .4);
+  background-color: rgba(95, 158, 160, .9);
   border-radius: 7px;
   background-size: 20px;
   padding: 4px;
@@ -96,14 +94,14 @@ h1 {
 /* ABOUT CSS */
 
 .about-img {
-  background-image: url(./components/pages/images/cyber-snow.jpg);
+  background-image: url(./components/pages/images/cyber-snow4.jpg);
   position: relative;
   background-size: cover;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  filter: blur(3px) brightness(1.1);
+  filter: brightness(1.1);
   opacity: .9;
   box-shadow: 0px 0px 15px 17px lightblue inset;
 }
@@ -113,8 +111,8 @@ h1 {
   justify-content: center;
   align-items: center;
   /* margin: 5% 20px; */
-  position: absolute;
-  bottom: 4%;
+  /* position: absolute;
+  bottom: 4%; */
  
 }
 
@@ -139,10 +137,6 @@ h1 {
   box-shadow: 4px 2px 15px 4px lightblue;
 }
 
-/* .profile-text h2 {
-  font-weight:bolder;
-} */
-
 .about-p-welcome {
   font-weight: bolder;
   font-size: large;
@@ -156,7 +150,7 @@ h1 {
 
 /* PORTFOLIO */
 .portfolio {
-  background-image: url(./components/pages/images/cyber-forest2.jpg);
+  background-image: url(./components/pages/images/cyber-forest5.jpg);
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -166,8 +160,9 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   min-height: 50vh;
-  /* box-shadow: -4px 3px 15px 0px rgb(214, 144, 93) inset; */
+  box-shadow:0px 0px 20px 5px rgb(93 214 153) inset;
 }
+/* rgb(93 214 188) */
 
 .collapsible {
   background-color: #eee;
@@ -180,6 +175,10 @@ h1 {
   outline: none;
   font-size: 15px;
   display: flex;
+}
+
+.content:hover {
+  filter: brightness(1.2);
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -205,36 +204,34 @@ h1 {
   cursor: pointer;
   width: fit-content;
   height: fit-content;
+  
   /* color: rgb(135, 241, 209); */
 }
-.Collapsible__contentInner {
 
+.Collapsible span:hover {
+  text-decoration: underline;
 }
-/* .Collapsible__contentInner {
-  animation: none;
-} */
 
 .project-container {
   position: relative;
   width: 50%;
-  /* max-height: 50vh; */
   left: 25%;
-  background-color: rgba(47, 79, 79, .97);
+  background-color: rgb(17 50 40 / 97%) ;
+  /* rgba(47, 79, 79, .97) */
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  /* border-radius: 15px; */
   border-radius: 15px 57px;
-
+  box-shadow: 0px 0px 20px 0px rgb(130 225 167) inset;
 }
 
 .card1 {
   width: 50%;
-  height: fit-content;
-  max-height: 100vh ;
+  /* height: fit-content; */
+  /* max-height: 100vh ; */
   margin-top: 30px;
-  z-index: 5;
+  /* z-index: 5; */
 }
 
 .card1-text {
@@ -256,12 +253,8 @@ h1 {
 }
 
 .card2 {
-  /* height: 300px; */
   width: 50%;
-  /* margin: 20px; */
   margin-top: 30px;
-  z-index: 5;
-  /* animation: glow 2000ms infinite */
 }
 
 .card2 img {
@@ -269,7 +262,7 @@ h1 {
   /* max-width: 300px; */
   height: 206px;
   width: 300px;
-  border-radius: 15px 15px;
+  border-radius: 15px 57px;
 }
 
 .card2-text {
@@ -279,34 +272,64 @@ h1 {
   font-size: larger;
 }
 
+.card2-text a {
+  text-decoration: underline;
+  color: aliceblue;
+}
 
+.port-link-text:hover {
+  background-color: rgba(255,255,224, .9);
+  color: #000;
+  border-radius: 5px;
+  font-weight: 900;
+}
 
 .card3 {
-  /* height: 300px; */
   width: 50%;
-  /* margin: 20px; */
   margin-top: 30px;
-  /* animation: glow 2000ms infinite */
+  margin-bottom: 30px;
 }
 
 .card3 img {
   max-height: 300px;
   max-width: 300px;
-  border-radius: 5px 100px;
+  border-radius: 15px 57px;
+}
+
+.card3-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+}
+
+.card3-text a {
+  text-decoration: underline;
+  color: aliceblue;
 }
 
 .card4 {
-  /* height: 300px; */
   width: 50%;
-  /* margin: 20px; */
   margin-top: 30px;
-  /* animation: glow 2000ms infinite */
+  margin-bottom: 30px;
 }
 
 .card4 img {
   max-height: 300px;
   max-width: 300px;
-  border-radius: 100px 5px;
+  border-radius: 15px 57px;
+}
+
+.card4-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+}
+
+.card4-text a {
+  text-decoration: underline;
+  color: aliceblue;
 }
 
 .description {
@@ -326,10 +349,13 @@ h1 {
   filter: brightness(.5);
 }
 
+.port-icon img:hover {
+  filter: brightness(1.2);
+}
 
 /* CONTACT */
 .contact-container {
-  background-image: url(./components/pages/images/cyber-field.jpg);
+  background-image: url(./components/pages/images/cyber-field2.jpg);
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -337,7 +363,7 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* box-shadow: -4px 3px 15px 0px rgb(214, 144, 93) inset; */
+  box-shadow: 0px 0px 15px 4px rgb(214, 186, 93) inset;
 }
 
 .contact-form {
@@ -438,6 +464,11 @@ h4 {
    padding: 1% 10.5%;
    /* box-shadow: 0px 1px 7px 0px rgb(214, 144, 93) inset; */
    border-bottom: rgba(214, 144, 93, .7) inset;
+}
+
+.resume-link a:hover {
+  color: rgb(132, 214, 239);
+  filter: brightness(1.3);
 }
 
 .resume-skills {
@@ -573,23 +604,120 @@ color: #000;
   }
 }
 
-@keyframes glow {
-  0% {
-      filter: brightness(.5);
-  
-  }
-  /* 25% {
-      filter: brightness(.75);
-  } */
-  50% {
-      filter: brightness(2);
-  }
-  /* 75% {
-    filter: brightness(1.25);
-  } */
-  100% {
-      filter: brightness(.5);
-      
-  }
-  
+@media screen and (max-width: 1024px) {
+ .project-container {
+   padding: 0px 8%;
+ }
 }
+@media screen and (max-width: 768px) {
+  /* HEAD AND NAV */
+  /* body {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  } */
+
+  .head-and-nav{
+    display: flex;
+    flex-direction: column;
+  }
+  header {
+    display: initial;
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1 {
+    margin-left: auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* margin-block-start: 0;
+    margin-block-end: 0; */
+  }
+  ul {
+    padding-inline-start: 0;
+  }
+  /* ABOUT */
+ p {
+   margin-block-start: auto;
+    margin-block-end: auto;
+ }
+
+  .about-img {
+    flex-direction: column;
+    height: auto;
+  }
+  .about-container {
+    flex-direction: column;
+  }
+  .profile-pic {
+    margin-top: 3%;
+    max-height: auto;
+    width: auto;
+    height: 228px;
+  }
+  /* PORTFOLIO */
+  .portfolio {
+    flex-direction: column;
+  }
+  .project-container {
+    width: auto;
+    align-items: center;
+    left: 0;
+  }
+  /* .collapsible {
+    flex-direction: column;
+  } */
+  .card1 {
+    flex-direction: column;
+    width: auto;
+    /* margin-top: 0; */
+  }
+  .card2 {
+    flex-direction: column;
+    width: auto;
+    /* margin-top: 0; */
+  } 
+  .card3 {
+    flex-direction: column;
+    width: auto;
+    margin-bottom: 0;
+  } 
+  .card4 {
+    flex-direction: column;
+    width: auto;
+    /* margin-bottom: 0; */
+  }
+/* CONTACT */
+  .contact-form {
+    width:75%;
+  }
+  .message-input {
+    width: auto;
+  }
+/* RESUME */
+  .resume-link {
+    width: auto;
+    margin-top: 7%;
+  }
+  .resume-link a {
+    width: auto;
+    padding: 7px;
+  }
+  .resume-skills {
+    padding: 0;
+    flex-wrap: wrap;
+    width: auto;
+    margin-bottom: 7%;
+  }
+  li {
+    text-align: center;
+  }
+}
+/* END OF MEDIA QRY */
