--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -608,6 +608,9 @@ color: #000;
  .project-container {
    padding: 0px 8%;
  }
+ .resume-skills {
+   border-radius: 10px;
+ }
 }
 @media screen and (max-width: 768px) {
   /* HEAD AND NAV */
