--- a/profile/src/App.css
+++ b/profile/src/App.css
@@ -110,10 +110,6 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin: 5% 20px; */
-  /* position: absolute;
-  bottom: 4%; */
- 
 }
 
 .profile-pic {
@@ -135,6 +131,7 @@ h1 {
   width: 55%;
   height: 40%;
   box-shadow: 4px 2px 15px 4px lightblue;
+  border:solid 1px rgba(135, 206, 250, .4)
 }
 
 .about-p-welcome {
@@ -145,7 +142,7 @@ h1 {
 .about-p {
   font-family: 'Alegreya', serif;
   font-size: larger;
-
+  text-indent: 30px;
 }
 
 /* PORTFOLIO */
